src/styles/css/main.css
md-item {
  margin: 0px 10px;
}

.username {
  text-align: center;
}

.md-toolbar-tools .fa {
  font-size: 18px;
}

.organization-widget {
  width: 200px;
  position: absolute;
  bottom: -180px;
  left: 15px;
  background: transparent;
  border-radius: 5px;
  border: 1px solid #99b742;
  padding: 10px;
  text-align: center;
}
.organization-widget .logo {
  width: 70px;
  margin: 0 auto;
  display: block;
}
.organization-widget .org-name {
  margin-top: 20px;
  margin-bottom: 20px;
}
.organization-widget .md-raised {
  color: #ffffff !important;
  margin: 0 auto;
  display: block;
}

.md-dialog-container md-content {
  padding-bottom: 0px;
  background-color: white !important;
  height: initial;
  color: #2e2e2e;
}
.md-dialog-container md-tooltip .md-background {
  height: 30px;
}
.md-dialog-container .md-subheader.md-default-theme {
  background-color: transparent;
}

md-toast .md-button {
  margin-top: -20px;
  margin-right: -20px;
}

.md-raised {
  padding: 5px 10px;
}

.md-button {
  text-transform: none;
}

md-input-container.long > input {
  width: 264px;
}

md-checkbox:focus .md-label {
  border-color: transparent;
}

.horizontal-radio-group md-radio-button:first-child {
  margin-top: 15px;
}

md-checkbox .md-icon {
  border-color: #8a8a8a !important;
}

body {
  color: #8a8a8a;
  font-family: 'Raleway', sans-serif;
}

md-content {
  height: 100vh;
  background-color: #2E2E2E !important;
}

.error-msg {
  color: #f44336;
  opacity: 1;
}

.error-msg.ng-hide-add.ng-hide-add-active,
.error-msg.ng-hide-remove.ng-hide-remove-active {
  -webkit-transition: opacity linear 0.5s;
  -moz-transition: opacity linear 0.5s;
  -ms-transition: opacity linear 0.5s;
  transition: opacity linear 0.5s;
}

.error-msg.ng-hide {
  opacity: 0;
}

[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}

ul.list-horizontal {
  list-style: none;
}
ul.list-horizontal li {
  float: left;
  text-align: center;
  margin-right: 15px;
  margin-bottom: 10px;
  padding: 5px;
  -webkit-box-shadow: 0px 2px 6px #888888;
  -moz-box-shadow: 0px 2px 6px #888888;
  -ms-box-shadow: 0px 2px 6px #888888;
  box-shadow: 0px 2px 6px #888888;
  max-width: 170px;
}
ul.list-horizontal li h3 {
  margin-bottom: 0px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
ul.list-horizontal li span.sub-text {
  font-size: 12px;
  font-weight: 500;
}

.collapse {
  overflow: hidden;
  max-height: 0 !important;
}

.well {
  background-color: #8a8a8a;
  padding: 50px 0px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
  width: 40%;
}

.md-actions-form {
  border-top: none;
  margin-top: 60px;
}
.md-actions-form button {
  margin-right: 15px;
}

.fade-in.ng-enter, .fade-in.ng-leave {
  -webkit-transition: opacity linear 0.5s;
  -moz-transition: opacity linear 0.5s;
  -ms-transition: opacity linear 0.5s;
  transition: opacity linear 0.5s;
}

.horizontal-checkbox {
  float: left;
}

.status {
  position: absolute;
  left: 6px;
  top: 5px;
  font-size: 12px;
}
.status .fa-exclamation {
  color: #f44336;
}
.status .fa-check {
  color: #99b742;
}

button {
  border: 0;
}

.organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
  -webkit-transition: max-height ease-in-out 0.9s;
  -moz-transition: max-height ease-in-out 0.9s;
  -ms-transition: max-height ease-in-out 0.9s;
  transition: max-height ease-in-out 0.9s;
  max-height: 200px;
}

.organization-wrapper .centered-row {
  padding: 0px 200px;
}
.organization-wrapper .tree-node {
  padding: 20px 20px;
  position: relative;
  background-color: #c2c5c3;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
  color: #3c3a3a;
  width: 155px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-decoration: none;
  text-align: center;
}
.organization-wrapper .tree-node md-input-container {
  padding: 0px;
  margin: 0px;
  height: 20px;
}
.organization-wrapper .tree-node md-input-container input.short {
  width: 120px;
  padding: 0px;
  color: #8a8a8a;
}
.organization-wrapper .tree-node:hover {
  -webkit-box-shadow: 0px 2px 6px #888888;
  -moz-box-shadow: 0px 2px 6px #888888;
  -ms-box-shadow: 0px 2px 6px #888888;
  box-shadow: 0px 2px 6px #888888;
}
.organization-wrapper .objective.active .tree-node,
.organization-wrapper .key-result.active .tree-node,
.organization-wrapper .organization.active .tree-node,
.organization-wrapper .tree.active .tree-node {
  background-color: #99b742;
}
.organization-wrapper .objective .tree-node:after {
  content: "OBJ";
}
.organization-wrapper .key-result .tree-node:after {
  content: "KR";
}
.organization-wrapper .tree .tree-node:after {
  content: "TR";
}
.organization-wrapper .objective .tree-node:after, .organization-wrapper .key-result .tree-node:after, .organization-wrapper .tree .tree-node:after {
  font-size: 12px;
  position: absolute;
  top: 7%;
  right: 5%;
  font-weight: 600;
  color: #3c3a3a;
}
.organization-wrapper .objective.add-node .tree-node:after, .organization-wrapper .key-result.add-node .tree-node:after {
  content: "";
}
.organization-wrapper .add-node {
  font-weight: 600;
}
.organization-wrapper .add-node .tree-node {
  color: #8a8a8a;
  background: transparent;
  border: 2px solid;
  padding: 8px;
}
.organization-wrapper .add-node .tree-node .fa {
  position: absolute;
  top: 20px;
  right: 20px;
}
.organization-wrapper .task-node {
  background-color: #99b742;
  padding: 10px 10px;
  padding-left: 20px;
  color: #3c3a3a;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
  min-width: 100px;
  margin-top: 10px;
  text-decoration: none;
  width: 250px;
  position: relative;
}
.organization-wrapper #taskNode [layout-align="start center"] {
  margin-top: -5px;
}
.organization-wrapper #taskNode [layout-align="start center"]:first-child {
  margin-top: 25px;
}
.organization-wrapper .objective + .objective,
.organization-wrapper .key-result + .key-result,
.organization-wrapper .organization + .organization,
.organization-wrapper .tree + .tree {
  margin-left: 25px;
}
.organization-wrapper .task-column {
  max-height: 100%;
  margin-bottom: 20px;
}
.organization-wrapper .task-row {
  margin-top: 25px !important;
}
.organization-wrapper .task-row .md-primary {
  background: transparent !important;
  border: 2px solid;
  color: #8a8a8a !important;
}
.organization-wrapper [layout-align="center center"], .organization-wrapper [layout-align="center"], .organization-wrapper [layout-align="start center"] {
  margin-top: 25px;
}
.organization-wrapper .md-button {
  padding: 3px 8px;
  margin-left: 10px;
}
.organization-wrapper .md-button + .md-button {
  margin-top: 5px;
}

.green-overlay {
  background-color: #99b742;
  color: #99b742;
  height: 100%;
  position: fixed !important;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1000;
}
.green-overlay h1 {
  color: #8a8a8a;
}
.green-overlay input {
  color: #99b742;
}
.green-overlay .side-nav-btn {
  margin: 0.85em 0;
  margin-left: -7px;
}

.error-not-found {
  text-align: center;
}
.error-not-found img {
  margin: 15px auto;
  width: 300px;
}

[layout=row] md-checkbox:first-child {
  margin-left: 0px;
  margin-top: 15px !important;
}

md-radio-group md-radio-button:first-child {
  margin-top: 15px !important;
}

